--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -62,7 +62,7 @@
   <div class="container">
     <img src="https://assets-global.website-files.com/6257adef93867e50d84d30e2/653714c18aeaa62dfe96cd3f_636e0b5493894cf60b300587_full_logo_white_RGB.svg" alt="Discord Logo" class="logo">
     <a href="https://discord.com/{{ link }}" class="button open-browser">Open in browser</a>
-    <a href="dsicord://discord.com/{{ link }}" class="button open-discord">Open in Discord</a>
+    <a href="discord://discord.com/{{ link }}" class="button open-discord">Open in Discord</a>
   </div>
 </body>
 </html>
